titel oanbevelingen balke en bug line-wrap in lange skermen

--- a/app/assets/stylesheets/gallery.css.sass
+++ b/app/assets/stylesheets/gallery.css.sass
@@ -40,8 +40,7 @@
 #recommandations .gallery
   height: 150px
   width: 70%
-  p
-    float: left
+  p:first-child
     line-height: 1.3em
     text-align: left
 
